--- a/css/style.css
+++ b/css/style.css
@@ -401,7 +401,7 @@
     box-shadow: 0 3px 7px rgba(0, 0, 0, .1);
     margin-left: 7px;
     margin-right: 7px;
-    padding: 0 15px 67px;
+    padding: 50px 15px;
     text-align: center;
     margin-bottom: 73px;
     -webkit-transition: all 300ms ease;
@@ -409,6 +409,7 @@
     -ms-transition: all 300ms ease;
     -o-transition: all 300ms ease;
     transition: all 300ms ease;
+    margin: 25px 0;
 }
 .singleService:hover{
     margin-top: -0px;
@@ -418,7 +419,6 @@
     height: 187px;
     margin: auto;
     position: relative;
-    top: -42px;
     width: 187px;
     background: transparent;
     border-radius: 50%;
