--- a/css/style.css
+++ b/css/style.css
@@ -469,6 +469,7 @@
     background-image: url(../images/bg1.png);
     opacity: 0.4;
     z-index: -2;
+    background-attachment: fixed;
 }
 .epr200{
     padding-right: 400px;
