--- a/css/responsive.css
+++ b/css/responsive.css
@@ -396,13 +396,12 @@
     .callus{
         display: none;
     }
-    .mobileBar,
-    .mobileBar2{
+    .mobileBar, .mobileBar2 {
         cursor: pointer;
         height: 20px;
         position: absolute;
-        right: 0;
-        top: -30px;
+        right: 25px;
+        top: -50px;
         width: 24px;
     }
     .mobileBar span,
@@ -513,10 +512,7 @@
     .chooseUsContent {
         padding-right: 0;
     }
-    #testmonialCaro {
-        padding: 100px 15px 29px;
-        text-align: center;
-    }
+
     .singleBlog{
         margin-bottom: 30px;
     }
@@ -567,10 +563,7 @@
     .chooseUsImg {
         margin-top: 0;
     }
-    .singleTestmn p{
-        font-size: 20px;
-        line-height: 35px;
-    }
+
     .bigTitle3{
         margin-bottom: 100px;
     }
@@ -590,9 +583,40 @@
         font-size: 40px;
         line-height: 50px;
     }
-    .singleTestm p{
-        font-size: 30px;
+    .singleTestm p {
+        font-size: 18px;
+        line-height: normal;
+    }
+    .singleTestmn p {
+        font-size: 18px;
+        color: #ffffff;
+        line-height: normal;
+        font-weight: 300;
+        text-align: center;
+    }
+    #testmonialCaro {
+        padding: 50px;
+    }
+    .magenta {
+        color: #db1f26;
+        font-size: 40px;
+    }
+    .isSticky.fixedHeader {
+        height: 87px;
+    }
+    .logo img {
+        width: 150px;
+    }
+    .stickyLogo img {
+        width: 111px;
+    }
+    h3 {
+        font-size: 18px;
+        letter-spacing: 0;
         line-height: 40px;
+    }
+    .bperaDiv{
+        margin: 0 25px;
     }
     .chooseUsContent{
         text-align: center;
@@ -644,6 +668,7 @@
     }
     .mainMenu ul li{
         border-bottom: 1px solid #f3f3f3;
+        margin: 0 !important;
     }
     .mainMenu ul li:hover ul.sub-menu {
         top: 0;
@@ -664,7 +689,7 @@
     }
     .polioThumb img {
         height: 100%;
-        width: auto;
+        width: 100%;
     }
     .slider2 .tp-rightarrow.default.round::after{
         right: 0;
@@ -945,3 +970,10 @@
 }*/
 
 
+@media (max-width:780px) {
+    .logo img {
+        width: 150px;
+        position: relative;
+        top: 0;
+    }
+}
